category api docs prepared
